[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/chat_command.gd" type="Script" id=1]
[ext_resource path="res://component/chat.gd" type="Script" id=2]

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatCommand" type="Node" parent="."]
script = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 768.0
margin_right = 1366.0
margin_bottom = 768.0
mouse_filter = 2
custom_constants/separation = 1
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer2"]
visible = false
margin_top = 744.0
margin_right = 1366.0
margin_bottom = 768.0
focus_mode = 1
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 8
max_length = 256
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="VBoxContainer2/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="text_entered" from="VBoxContainer2/LineEdit" to="." method="_on_LineEdit_text_entered"]
